fixed spacing in footer

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
 
 .footer-icons {
   padding-left: 10% !important;
+  max-width: 10%;
 }
 
 .bg-black {
